crates/strider/tests/snapshots/arm_be__builtins__main.snap
---
source: crates/strider/tests/v1_baseline.rs
expression: snapshot_body
---
digraph "G" {
  graph [
    rankdir=TB,
    bgcolor="#1e1e1e",
    fontcolor=white,
  ];

  node [
    shape=box,
    style="filled,rounded",
    fillcolor="#2d2d2d",
    color="#888888",
    fontcolor=white,
    fontname=monospace,
    margin=0.2,
  ];

  edge [
    color="#aaaaaa",
    fontcolor=white,
    penwidth=1.2,
  ];

  "0" [label="Entry", shape=Mdiamond, fillcolor="#1a3a5c"];
  "1" [label="Call", shape=rarrow, fillcolor="#3a1010"];
  "0" -> "1" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "2" -> "1" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "3" -> "1" [color="#ffdd44", label=target, fontcolor="#cccccc", fontsize=9];
  "3" [label="const 0x100d8:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "4" -> "1" [color="#ff8800", label=arg0, fontcolor="#cccccc", fontsize=9];
  "4" [label="const 0xdeadbeef:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "5" -> "1" [color="#ff8800", label=arg1, fontcolor="#cccccc", fontsize=9];
  "6" -> "1" [color="#ff8800", label=arg2, fontcolor="#cccccc", fontsize=9];
  "7" -> "1" [color="#ff8800", label=arg3, fontcolor="#cccccc", fontsize=9];
  "8" -> "1" [color="#ff8800", label=arg4, fontcolor="#cccccc", fontsize=9];
  "8" [label="const 0xdeadbeef:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "9" [label="Call", shape=rarrow, fillcolor="#3a1010"];
  "1" -> "9" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "10" -> "9" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "11" -> "9" [color="#ffdd44", label=target, fontcolor="#cccccc", fontsize=9];
  "11" [label="const 0x10130:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "12" -> "9" [color="#ff8800", label=arg0, fontcolor="#cccccc", fontsize=9];
  "12" [label="const 0x10000:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "v13" [label="Post Call\nr0", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "1" -> "v13" [color="#888888", style=dashed];
  "v13" -> "9" [color="#ff8800", label=arg1, fontcolor="#cccccc", fontsize=9];
  "v14" [label="Post Call\nr2", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "1" -> "v14" [color="#888888", style=dashed];
  "v14" -> "9" [color="#ff8800", label=arg2, fontcolor="#cccccc", fontsize=9];
  "v15" [label="Post Call\nr3", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "1" -> "v15" [color="#888888", style=dashed];
  "v15" -> "9" [color="#ff8800", label=arg3, fontcolor="#cccccc", fontsize=9];
  "16" -> "9" [color="#ff8800", label=arg4, fontcolor="#cccccc", fontsize=9];
  "16" [label="const 0x10000:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "17" [label="Call", shape=rarrow, fillcolor="#3a1010"];
  "9" -> "17" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "18" -> "17" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "19" -> "17" [color="#ffdd44", label=target, fontcolor="#cccccc", fontsize=9];
  "19" [label="const 0x10148:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "20" -> "17" [color="#ff8800", label=arg0, fontcolor="#cccccc", fontsize=9];
  "21" -> "17" [color="#ff8800", label=arg1, fontcolor="#cccccc", fontsize=9];
  "v22" [label="Post Call\nr0", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "9" -> "v22" [color="#888888", style=dashed];
  "v22" -> "17" [color="#ff8800", label=arg2, fontcolor="#cccccc", fontsize=9];
  "v23" [label="Post Call\nr3", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "9" -> "v23" [color="#888888", style=dashed];
  "v23" -> "17" [color="#ff8800", label=arg3, fontcolor="#cccccc", fontsize=9];
  "21" -> "17" [color="#ff8800", label=arg4, fontcolor="#cccccc", fontsize=9];
  "24" [label="Call", shape=rarrow, fillcolor="#3a1010"];
  "17" -> "24" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "25" -> "24" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "26" -> "24" [color="#ffdd44", label=target, fontcolor="#cccccc", fontsize=9];
  "26" [label="const 0x1016c:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "27" -> "24" [color="#ff8800", label=arg0, fontcolor="#cccccc", fontsize=9];
  "28" -> "24" [color="#ff8800", label=arg1, fontcolor="#cccccc", fontsize=9];
  "28" [label="const 0xcafebabe:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "v29" [label="Post Call\nr0", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "17" -> "v29" [color="#888888", style=dashed];
  "v29" -> "24" [color="#ff8800", label=arg2, fontcolor="#cccccc", fontsize=9];
  "v30" [label="Post Call\nr3", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "17" -> "v30" [color="#888888", style=dashed];
  "v30" -> "24" [color="#ff8800", label=arg3, fontcolor="#cccccc", fontsize=9];
  "31" -> "24" [color="#ff8800", label=arg4, fontcolor="#cccccc", fontsize=9];
  "32" [label="Call", shape=rarrow, fillcolor="#3a1010"];
  "24" -> "32" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "33" -> "32" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "34" -> "32" [color="#ffdd44", label=target, fontcolor="#cccccc", fontsize=9];
  "34" [label="const 0x101f8:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "35" -> "32" [color="#ff8800", label=arg0, fontcolor="#cccccc", fontsize=9];
  "36" -> "32" [color="#ff8800", label=arg1, fontcolor="#cccccc", fontsize=9];
  "37" -> "32" [color="#ff8800", label=arg2, fontcolor="#cccccc", fontsize=9];
  "v38" [label="Post Call\nr0", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "24" -> "v38" [color="#888888", style=dashed];
  "v38" -> "32" [color="#ff8800", label=arg3, fontcolor="#cccccc", fontsize=9];
  "37" -> "32" [color="#ff8800", label=arg4, fontcolor="#cccccc", fontsize=9];
  "39" [label="Call", shape=rarrow, fillcolor="#3a1010"];
  "32" -> "39" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "40" -> "39" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "41" -> "39" [color="#ffdd44", label=target, fontcolor="#cccccc", fontsize=9];
  "41" [label="const 0x10228:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "42" -> "39" [color="#ff8800", label=arg0, fontcolor="#cccccc", fontsize=9];
  "42" [label="const 0x32:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "v43" [label="Post Call\nr0", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "32" -> "v43" [color="#888888", style=dashed];
  "v43" -> "39" [color="#ff8800", label=arg1, fontcolor="#cccccc", fontsize=9];
  "v44" [label="Post Call\nr2", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "32" -> "v44" [color="#888888", style=dashed];
  "v44" -> "39" [color="#ff8800", label=arg2, fontcolor="#cccccc", fontsize=9];
  "v45" [label="Post Call\nr3", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "32" -> "v45" [color="#888888", style=dashed];
  "v45" -> "39" [color="#ff8800", label=arg3, fontcolor="#cccccc", fontsize=9];
  "46" -> "39" [color="#ff8800", label=arg4, fontcolor="#cccccc", fontsize=9];
  "47" [label="Return", shape=doublecircle, fillcolor="#103a10"];
  "39" -> "47" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "48" -> "47" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "49" -> "47" [color="#88cc88", label=r0, fontcolor="#cccccc", fontsize=9];
  "v50" [label="Post Call\nr0", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "39" -> "v50" [color="#888888", style=dashed];
  "v50" -> "47" [color="#88cc88", label=r1, fontcolor="#cccccc", fontsize=9];
  "v51" [label="Post Call\nd0", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "39" -> "v51" [color="#888888", style=dashed];
  "v51" -> "47" [color="#88cc88", label=d0, fontcolor="#cccccc", fontsize=9];
  "v52" [label="Post Call\nd1", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "39" -> "v52" [color="#888888", style=dashed];
  "v52" -> "47" [color="#88cc88", label=d1, fontcolor="#cccccc", fontsize=9];
  "49" [label="Xor:u32", shape=box, fillcolor="#2d2d2d"];
  "53" -> "49" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "v50" -> "49" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "53" [label="Load u32\n← ram", shape=box3d, fillcolor="#102030"];
  "39" -> "53" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "54" -> "53" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "54" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "55" -> "54" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "56" -> "54" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "56" [label="const 0xfffffff4:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "55" [label="init\nsp", shape=Mdiamond, fillcolor="#1a3a5c"];
  "48" [label="StackStore u32\n→ ram[sp - 12]", shape=box3d, fillcolor="#20182a"];
  "39" -> "48" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v57" [label="init\nsp", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v57" -> "48" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "49" -> "48" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "46" [label="Xor:u32", shape=box, fillcolor="#2d2d2d"];
  "58" -> "46" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "v43" -> "46" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "58" [label="Load u32\n← ram", shape=box3d, fillcolor="#102030"];
  "32" -> "58" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "54" -> "58" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "40" [label="StackStore u32\n→ ram[sp - 12]", shape=box3d, fillcolor="#20182a"];
  "32" -> "40" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v59" [label="init\nsp", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v59" -> "40" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "46" -> "40" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "37" [label="Xor:u32", shape=box, fillcolor="#2d2d2d"];
  "60" -> "37" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "v38" -> "37" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "60" [label="Load u32\n← ram", shape=box3d, fillcolor="#102030"];
  "24" -> "60" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "54" -> "60" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "36" [label="Load u32\n← ram", shape=box3d, fillcolor="#102030"];
  "24" -> "36" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "61" -> "36" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "61" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "55" -> "61" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "62" -> "61" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "62" [label="const 0x1ffffffec:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "35" [label="Load u32\n← ram", shape=box3d, fillcolor="#102030"];
  "24" -> "35" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "63" -> "35" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "63" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "55" -> "63" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "64" -> "63" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "64" [label="const 0x1fffffff0:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "33" [label="StackStore u32\n→ ram[sp - 12]", shape=box3d, fillcolor="#20182a"];
  "24" -> "33" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v65" [label="init\nsp", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v65" -> "33" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "37" -> "33" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "31" [label="Xor:u32", shape=box, fillcolor="#2d2d2d"];
  "66" -> "31" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "v29" -> "31" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "66" [label="Load u32\n← ram", shape=box3d, fillcolor="#102030"];
  "17" -> "66" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "54" -> "66" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "27" [label="Load u32\n← ram", shape=box3d, fillcolor="#102030"];
  "17" -> "27" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "67" -> "27" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "67" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "55" -> "67" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "68" -> "67" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "68" [label="const 0x1ffffffe8:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "25" [label="StackStore u32\n→ ram[sp - 12]", shape=box3d, fillcolor="#20182a"];
  "17" -> "25" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v69" [label="init\nsp", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v69" -> "25" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "31" -> "25" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "21" [label="Xor:u32", shape=box, fillcolor="#2d2d2d"];
  "70" -> "21" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "v22" -> "21" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "70" [label="Load u32\n← ram", shape=box3d, fillcolor="#102030"];
  "9" -> "70" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "54" -> "70" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "20" [label="Load u32\n← ram", shape=box3d, fillcolor="#102030"];
  "9" -> "20" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "61" -> "20" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "18" [label="StackStore u32\n→ ram[sp - 12]", shape=box3d, fillcolor="#20182a"];
  "9" -> "18" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v71" [label="init\nsp", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v71" -> "18" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "21" -> "18" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "10" [label="StackStore u32\n→ ram[sp - 20]", shape=box3d, fillcolor="#20182a"];
  "72" -> "10" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v73" [label="init\nsp", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v73" -> "10" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "74" -> "10" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "74" [label="const 0x10000:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "72" [label="StackStore u32\n→ ram[sp - 12]", shape=box3d, fillcolor="#20182a"];
  "1" -> "72" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v75" [label="init\nsp", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v75" -> "72" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "76" -> "72" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "76" [label="Xor:u32", shape=box, fillcolor="#2d2d2d"];
  "77" -> "76" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "v13" -> "76" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "77" [label="Load u32\n← ram", shape=box3d, fillcolor="#102030"];
  "1" -> "77" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "54" -> "77" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "7" [label="arg[3] ← r3", shape=Mdiamond, fillcolor="#1a3a5c"];
  "6" [label="arg[2] ← r2", shape=Mdiamond, fillcolor="#1a3a5c"];
  "5" [label="arg[1] ← r1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "2" [label="StackStore u32\n→ ram[sp - 24]", shape=box3d, fillcolor="#20182a"];
  "78" -> "2" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v79" [label="init\nsp", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v79" -> "2" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "80" -> "2" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "80" [label="const 0xdeadbeef:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "78" [label="StackStore u32\n→ ram[sp - 12]", shape=box3d, fillcolor="#20182a"];
  "81" -> "78" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v82" [label="init\nsp", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v82" -> "78" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "83" -> "78" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "83" [label="const 0x0:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "81" [label="StackStore u32\n→ ram[sp - 16]", shape=box3d, fillcolor="#20182a"];
  "84" -> "81" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v85" [label="init\nsp", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v85" -> "81" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "86" -> "81" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "86" [label="const 0x0:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "84" [label="StackStore u32\n→ ram[sp - 8]", shape=box3d, fillcolor="#20182a"];
  "87" -> "84" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v88" [label="init\nsp", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v88" -> "84" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "89" -> "84" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "89" [label="init\nr11", shape=Mdiamond, fillcolor="#1a3a5c"];
  "87" [label="StackStore u32\n→ ram[sp - 4]", shape=box3d, fillcolor="#20182a"];
  "90" -> "87" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v91" [label="init\nsp", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v91" -> "87" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "92" -> "87" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "92" [label="init\nlr", shape=Mdiamond, fillcolor="#1a3a5c"];
  "90" [label="InitialMemory", shape=Mdiamond, fillcolor="#1a3a5c"];
}
